[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Sampah.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Sampah" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="Sprite" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[connection signal="gui_input" from="Sprite" to="." method="_on_Sprite_gui_input"]
[connection signal="mouse_entered" from="Sprite" to="." method="_on_Sprite_mouse_entered"]
[connection signal="mouse_exited" from="Sprite" to="." method="_on_Sprite_mouse_exited"]
